# figures

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/app/: main.cpp
src/main/: area_calculator.cpp  area_calculator.h  area_sumator.cpp  area_sumator.h
src/main/data_source/: binary_circle_reader.cpp  binary_circle_reader.h  binary_data_figures_reader.cpp  binary_data_figures_reader.h  binary_figure_reader.h  binary_polygon_reader.cpp  binary_polygon_reader.h  binary_rectangle_reader.cpp  binary_rectangle_reader.h  binary_square_reader.cpp  binary_square_reader.h
src/main/dom/figures/: circle.cpp  circle.h  figure.h  polygon.cpp  polygon.h  primitives.h  rectangle.cpp  rectangle.h  square.cpp  square.h
src/test/data_source/: binary_readers.cpp
src/test/dom/figures/: circle_test.cpp  polygon_test.cpp  rectangle_test.cpp  square_test.cpp
